feat: 新增JMM与ThreadLocal章节，更新文档引用与章节配置